5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1635_1055.log
== TEST (2019-04-15 12:40:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

v = float(input("Qual a velocidade? "))
alfa = radians(float(input("Qual o angulo? ")))
D = float(input("Qual a distancia? "))

g = 9.8

d = ((v**2) * sin(2*alfa)) / g

if(abs(D >=d - 0.1 and D<=d + 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 15
    if(abs(D >=d - 0.1 and D<=d + 0.1):
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:41:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

v = float(input("Qual a velocidade? "))
alfa = radians(float(input("Qual o angulo? ")))
D = float(input("Qual a distancia? "))

g = 9.8

d = ((v**2) * sin(2*alfa)) / g

if(abs(D >=d + 0.1 and D <= d - 0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 15
    if(abs(D >=d + 0.1 and D <= d - 0.1):
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:42:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

v = float(input("Qual a velocidade? "))
alfa = radians(float(input("Qual o angulo? ")))
D = float(input("Qual a distancia? "))

g = 9.8

d = ((v**2) * sin(2*alfa)) / g

if(abs(D - d >=  0.1):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.223243
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 15
    if(abs(D - d >=  0.1):
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:42:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

v = float(input("Qual a velocidade? "))
alfa = radians(float(input("Qual o angulo? ")))
D = float(input("Qual a distancia? "))

g = 9.8

d = ((v**2) * sin(2*alfa)) / g

if(abs(D - d <=  0.1):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.147269
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 15
    if(abs(D - d <=  0.1):
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:42:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

v = float(input("Qual a velocidade? "))
alfa = radians(float(input("Qual o angulo? ")))
D = float(input("Qual a distancia? "))

g = 9.8

d = ((v**2) * sin(2*alfa)) / g

if(abs(D - d <=  0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 15
    if(abs(D - d <=  0.1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:43:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

from math import*

v = float(input("Qual a velocidade? "))
alfa = radians(float(input("Qual o angulo? ")))
D = float(input("Qual a distancia? "))

g = 9.8

d = ((v**2) * sin(2*alfa)) / g

if(abs(D - d <=  0.1)):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.168795
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
